# TetrisBot

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  bot.h  drawer.cpp  drawer.h  field.cpp  field.h  main.cpp  piece.cpp  piece.h  point.h  settings.h  tetris.cpp  tetris.h
